dev/manifests/3rd-party/kafka-ui/ingress.yaml
---
# Source: kafka-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  labels:
    helm.sh/chart: kafka-ui-0.7.1-1
    app.kubernetes.io/name: kafka-ui
    app.kubernetes.io/instance: kafka-ui
    app.kubernetes.io/version: "v0.7.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/family: orbitant
    pia-team.com/role: pia.k8s.kafka-ui/0.9.0
spec:
  tls:
  - hosts:
    - kafka-ui.orbitant.192.168.21.10.nip.io
    secretName:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kafka-ui
            port:
              number: 80
        pathType: Prefix
        path: /
    host: kafka-ui.orbitant.192.168.21.10.nip.io
